<resources>
    <string name="app_name">Student Placement Android App</string>
    <string name="sign_in">Sign In</string>
    <string name="access_to_your_account">Access to Your Account</string>
    <string name="student_id">Student Id</string>
    <string name="password">Password</string>
    <string name="let_s_get_you_placed">Let\'s get You Placed</string>
    <string name="welcome">Welcome!</string>
    <string name="next">Next  ></string>
    <string name="register">Register</string>
    <string name="next_1">Next</string>
    <string name="submit">Submit</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="city">City</string>
    <string name="department">Department</string>
    <string name="_10th_percentage">10th Percentage</string>
    <string name="_12th_percentage">12th Percentage</string>
    <string name="diploma_cgpa">Diploma CGPA</string>
    <string name="current_cgpa">Current CGPA</string>
    <string name="domain">Domain</string>
    <string name="resume">Resume</string>
    <string name="internship_letter">Internship Letter</string>
    <string name="last_name">Last Name</string>
    <string name="email_id">Email Id</string>
    <string name="first_name">First Name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="save">Save</string>
    <string name="todo">TODO</string>
    <string name="hi_user">Hi, User</string>
    <string name="configure_your_setiings">Configure your setiings</string>
    <string name="your_watchlist">Your watchlist</string>
    <string name="view_companies_you_like">View companies you like</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="logout">Logout</string>
    <string name="about_us">About Us</string>
    <string name="date">date</string>
    <string name="exit_msg">Are you sure you want to exit?</string>
    <string name="cancel">Cancel</string>
    <string name="exit">Exit</string>
</resources>