<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.SaveFragment"
    android:background="#E3DCEB">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tvToolbarHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/todo"
            android:src="@drawable/hireto_1" />
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/llGreetingText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvToolbarHome"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/studentName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hi_user"
            android:textSize="@dimen/_20sdp"
            android:fontFamily="@font/inter_bold"
            android:textColor="@color/black"
            android:layout_marginStart="@dimen/_5sdp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/let_s_get_you_placed"
            android:textSize="@dimen/_15sdp"
            android:fontFamily="@font/inter_regular"
            android:textColor="@color/secText"
            android:layout_marginStart="@dimen/_5sdp"/>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@id/llGreetingText"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/_5sdp"
        tools:listitem="@layout/rv_temp_layout"
        app:spanCount="10"/>



</RelativeLayout>