<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/registration_bg"
    android:gravity="center"
    tools:context=".activity.RegistrationActivity">

    <LinearLayout
        android:id="@+id/llRegistration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="@dimen/_7sdp"
        android:layout_marginEnd="@dimen/_7sdp"
        android:foregroundGravity="center"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_semibold"
            android:gravity="center"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="@dimen/_20sdp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llRegistrationForm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/llRegistration"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="@dimen/_7sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_7sdp"
        android:background="@drawable/rec_bg"
        android:foregroundGravity="center"
        android:gravity="top"
        android:orientation="vertical"
        tools:ignore="UselessParent">


        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:fontFamily="@font/inter_regular"
            android:hint="@string/student_id"
            android:textColorHint="#9FA1AA"
            android:backgroundTint="#9FA1AA"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="@dimen/_3sdp"
            android:textColor="#9FA1AA" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:fontFamily="@font/inter_regular"
            android:textColorHint="#9FA1AA"
            android:backgroundTint="#9FA1AA"
            android:hint="@string/student_id"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="@dimen/_3sdp"
            android:textColor="#9FA1AA" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:textColorHint="#9FA1AA"
            android:backgroundTint="#9FA1AA"
            android:fontFamily="@font/inter_regular"
            android:hint="@string/student_id"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="@dimen/_3sdp"
            android:textColor="#9FA1AA" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:textColorHint="#9FA1AA"
            android:backgroundTint="#9FA1AA"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:fontFamily="@font/inter_regular"
            android:hint="@string/student_id"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="@dimen/_3sdp"
            android:textColor="#9FA1AA" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:fontFamily="@font/inter_regular"
            android:hint="@string/student_id"
            android:textColorHint="#9FA1AA"
            android:backgroundTint="#9FA1AA"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="@dimen/_3sdp"
            android:textColor="#9FA1AA" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:backgroundTint="#9FA1AA"
            android:textColorHint="#9FA1AA"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:fontFamily="@font/inter_regular"
            android:hint="@string/student_id"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="@dimen/_3sdp"
            android:textColor="#9FA1AA" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:backgroundTint="#9FA1AA"
            android:textColorHint="#9FA1AA"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:fontFamily="@font/inter_regular"
            android:hint="@string/student_id"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="@dimen/_3sdp"
            android:textColor="#9FA1AA" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/llRegistrationForm"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="@dimen/_7sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_7sdp"
        android:foregroundGravity="center"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:backgroundTint="@color/black"
            android:foregroundGravity="center"
            app:cardCornerRadius="@dimen/_10sdp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/inter_semibold"
                android:gravity="center"
                android:paddingStart="@dimen/_25sdp"
                android:paddingTop="@dimen/_7sdp"
                android:paddingEnd="@dimen/_25sdp"
                android:paddingBottom="@dimen/_7sdp"
                android:text="@string/next_1"
                android:textColor="@color/white"
                android:textSize="@dimen/_15sdp" />

        </androidx.cardview.widget.CardView>
    </LinearLayout>

</RelativeLayout>